<resources>
    <string name="app_name">WordGame</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="fragment_login">LOGIN_FRAGMENT</string>
    <string name="fragment_menu">MENU_FRAGMENT</string>
    <string name="fragment_choose_deck">CHOOSE_DECK_FRAGMENT</string>
    <string name="unsupported_operation">%1$s is not supported operation</string>
    <string name="illegal_argument">%1$s is not supported argument</string>
    <string name="label_logout">Log out</string>
    <string name="label_play">Play</string>
    <string name="label_entry_google">Entry by google</string>
    <string name="label_word_count">Words count: %1$d</string>
    <string name="label_entry_deck_name">Entry deck name</string>
    <string name="label_entry_word">Entry word</string>
    <string name="label_entry_translate">Entry translate</string>
    <string name="label_auto_translate">Auto</string>
    <string name="label_add">Add</string>
    <string name="label_count_translates">%1$d/4</string>
    <string name="fragment_add_deck">ADD_DECK_FRAGMENT</string>
    <string name="label_entry_wrong_translate">Entry wrong translate</string>
    <string name="label_create_card">Create card</string>
    <string name="label_add_wrong_translate_error">All wrong words are added</string>
    <string name="label_create">Create</string>
    <string name="yandex_key">trnsl.1.1.20180612T074102Z.764e033bcf9c41d5.31f4cc9bada282d09a89fb14561d84e3ff50c5e5</string>
    <string name="fragment_play">PLAY_FRAGMENT</string>
    <string name="fragment_rating">RATING_FRAGMENT</string>
    <string name="label_next">Next</string>
    <string name="label_user_position">%1$d.</string>
    <string name="label_time">Time: %1$d</string>
    <string name="label_no_correct_answer">No correct answer</string>
    <string name="label_count_cards">%1$d/10</string>
    <string name="label_entry_text_in_wrong_translate_error">Entry text in wrong translate field</string>
</resources>
